# incognito-program

./: Anchor.toml  README.md  package.json
.github/workflows/: ci.yml
programs/incognito_program/: Cargo.toml
programs/incognito_program/src/: lib.rs  verifying_key.rs
tests/: incognito_program.ts  v1_withdraw.test.ts  v2_spend_with_change.test.ts  v2_token2022_deposit.test.ts
