[package]
name = "incognito_program"
version = "0.1.0"
description = "Incognito Swap MVP program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incognito_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
groth16-solana = "0.2.0"

[dev-dependencies]
serde_json = "1"
